test/programs/good/typechecker/measr_2.lq
initBit :: !(() -> Bit)
initBit _ = measr (new @0)

main :: Bit
main = initBit ()

