test/programs/bad/typechecker/measr_3.lq
initBit :: !(() -> Bit)
initBit _ = measr (new @0)

main :: Bit * Qbit
main = (initBit (), initBit ())
